# video-extract-transcript

./: .gitignore  LICENSE  README.md  extract_transcript.py  fv8zpYI9n6s.json  fv8zpYI9n6s.paragraphs.txt  fv8zpYI9n6s.srt  fv8zpYI9n6s.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_cli.py
yt_transcript/: __init__.py  __main__.py  cli.py
