[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript"
version = "1.0.0"
description = "Extract full transcripts from YouTube videos (paragraphs, txt, srt, json). No API key needed."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "0xaldric" }]
keywords = ["youtube", "transcript", "subtitles", "captions", "srt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = ["youtube-transcript-api>=1.2.0"]

[project.urls]
Homepage = "https://github.com/0xaldric/video-extract-transcript"
Repository = "https://github.com/0xaldric/video-extract-transcript"

[project.scripts]
yt-transcript = "yt_transcript.cli:main"

[tool.setuptools]
packages = ["yt_transcript"]
